--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 			<li><a href="/">Home</a></li>
 			<li><a href="/about">About</a></li>
 			<li><a href="/cv">CV</a></li>
-			<li><a href="/blog">Blog</a></li>
+			<li><a href="/papers">Papers</a></li>
 		</ul>
 	</nav>
 	<div class="container">
@@ -23,8 +23,8 @@
 	</div><!-- /.container -->
 	<footer>
 		<ul>
-			<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-			<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+			<li><a href="haomingli@uchicago.edu">email</a></li>
+			<li><a href="https://github.com/doltonius">github.com/doltonius</a></li>
 		</ul>
 	</footer>
 </body>
