--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 			<li><a href="/">Home</a></li>
 			<li><a href="/about">About</a></li>
 			<li><a href="/cv">CV</a></li>
-			<li><a href="/papers">Papers</a></li>
+			<li><a href="/papers">Research</a></li>
 		</ul>
 	</nav>
 	<div class="container">
