--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,31 +2,31 @@
 <html>
 
 <head>
-	<title>{{ page.title }}</title>
-	<!-- link to main stylesheet -->
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
+  <title>{{ page.title }}</title>
+  <!-- link to main stylesheet -->
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 
 <body>
-	<nav>
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/about">About</a></li>
-			<li><a href="/cv">CV</a></li>
-			<li><a href="/papers">Research</a></li>
-		</ul>
-	</nav>
-	<div class="container">
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      {% comment %} <li><a href="/about">About</a></li> {% endcomment %}
+      <li><a href="/cv">CV</a></li>
+      <li><a href="/papers">Research</a></li>
+    </ul>
+  </nav>
+  <div class="container">
 
-		{{ content }}
+    {{ content }}
 
-	</div><!-- /.container -->
-	<footer>
-		<ul>
-			<li><a href="haomingli@uchicago.edu">email</a></li>
-			<li><a href="https://github.com/doltonius">github.com/doltonius</a></li>
-		</ul>
-	</footer>
+  </div><!-- /.container -->
+  <footer>
+    <ul>
+      <li><a href="haoming@mit.edu">email</a></li>
+      <li><a href="https://github.com/doltonius">github.com/doltonius</a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
