--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,7 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      {% comment %} <li><a href="/about">About</a></li> {% endcomment %}
-      <li><a href="/cv">CV</a></li>
+      <li><a href="/files/cv.pdf">CV</a></li>
       <li><a href="/papers">Research</a></li>
     </ul>
   </nav>
@@ -23,7 +22,7 @@
   </div><!-- /.container -->
   <footer>
     <ul>
-      <li><a href="haoming@mit.edu">email</a></li>
+      <li><a href="mailto:haoming@mit.edu">haomingli@mit.edu</a></li>
       <li><a href="https://github.com/doltonius">github.com/doltonius</a></li>
     </ul>
   </footer>
