--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
   </div><!-- /.container -->
   <footer>
     <ul>
-      <li><a href="mailto:haoming@mit.edu">haomingli@mit.edu</a></li>
-      <li><a href="https://github.com/doltonius">github.com/doltonius</a></li>
+      <li><a href="mailto:haomingl@mit.edu">haomingl@mit.edu</a></li>
+      <li><a href="https://github.com/haoming-li-ling">github.com/haoming-li-ling</a></li>
     </ul>
   </footer>
 </body>
