--- a/css/main.css
+++ b/css/main.css
@@ -51,8 +51,8 @@
 body {
   margin: 60px auto;
   width: 70%;
-  min-width: 300pt;
-  max-width: 800pt;
+  min-width: 400px;
+  max-width: 800px;
 }
 nav ul {
   padding: 0px;
