--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ nav ul li, footer ul li {
   display: inline;
   margin-right: 20px;
 }
+i { color: inherit; }
 a {
   /* font-family: "JB", monospace; */
   text-decoration: none;
@@ -82,9 +83,9 @@ a:hover {
 /* nav ul li a { */
 /*   font-family: "Libertinus Sans"; */
 /* } */
-footer ul li a {
+/* footer ul li a { */
   /* font-size: 100%; */
-}
+/* } */
 .date {
   color: #d7abfd;
 }
@@ -98,12 +99,12 @@ h1, h2, h3 {
   color: #90bcff;
   /* font-family:'Helvetica', 'Arial', 'Sans-Serif'; */
 }
-p {
+/* p { */
   /* font-size: 1.5em; */
   /* line-height: 1.4em; */
   /* font-family: "Libertinus Serif"; */
   /* color: #333; */
-}
+/* } */
 footer {
   /* border-top: 1px solid #d5d5d5; */
   font-size: .8em;
