--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/files/cv.pdf">CV</a></li>
+      <li><a href="/files/haoming_li_cv.pdf">CV</a></li>
       <li><a href="/papers">Research</a></li>
     </ul>
   </nav>
