--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,13 @@
   src: url("/fonts/JetBrainsMono-Medium.woff2") format("woff2"), url("/fonts/JetBrainsMono-Medium.ttf") format("truetype");
   font-style: normal;
 }
+
+@font-face {
+  font-family: "IO";
+  src: url("/fonts/SGr-Iosevka-Regular.ttc") format("truetype");
+  font-style: normal;
+}
+
 .container {
   /* width: 800px; */
   margin-left: auto;
@@ -42,7 +49,7 @@
 }
 * {
   /* font-family: "Libertinus Serif"; */
-  font-family: "JB";
+  font-family: "IO";
   color: #c1c8e5;
   background: #202136;
   /* font-size: 90%; */
