--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <title>{{ page.title }}</title>
   <!-- link to main stylesheet -->
   <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link href="https://iosevka-webfonts.github.io/iosevka/iosevka.css" rel="stylesheet" />
 </head>
 
 <body>
