--- a/css/main.css
+++ b/css/main.css
@@ -24,23 +24,23 @@
   src: url(/fonts/LibertinusSerif-Italic.woff2) format("woff2");
   font-style: italic;
 }
-@font-face {
-  font-family: "Libertinus Serif";
-  src: url(/fonts/LibertinusSerif-Bold.woff2) format("woff2");
-  font-style: normal;
-  font-weight: bold;
-}
-@font-face {
-  font-family: "JB";
-  src: url("/fonts/JetBrainsMono-Medium.woff2") format("woff2"), url("/fonts/JetBrainsMono-Medium.ttf") format("truetype");
-  font-style: normal;
-}
+/* @font-face { */
+/*   font-family: "Libertinus Serif"; */
+/*   src: url(/fonts/LibertinusSerif-Bold.woff2) format("woff2"); */
+/*   font-style: normal; */
+/*   font-weight: bold; */
+/* } */
+/* @font-face { */
+/*   font-family: "JB"; */
+/*   src: url("/fonts/JetBrainsMono-Medium.woff2") format("woff2"), url("/fonts/JetBrainsMono-Medium.ttf") format("truetype"); */
+/*   font-style: normal; */
+/* } */
 
-@font-face {
-  font-family: "IO";
-  src: url("/fonts/SGr-Iosevka-Regular.ttc") format("collection");
-  font-style: normal;
-}
+/* @font-face { */
+/*   font-family: "IO"; */
+/*   src: url("/fonts/SGr-Iosevka-Regular.ttc") format("collection"); */
+/*   /* font-style: normal; */ */
+/* } */
 
 .container {
   /* width: 800px; */
@@ -49,7 +49,7 @@
 }
 * {
   /* font-family: "Libertinus Serif"; */
-  font-family: "IO";
+  font-family: "Iosevka Web";
   color: #c1c8e5;
   background: #202136;
   /* font-size: 90%; */
